--- a/src/meson.build
+++ b/src/meson.build
@@ -6,6 +6,10 @@ todo_sources = [
 todo_deps = [
   dependency('gio-2.0', version: '>= 2.50'),
   dependency('gtk+-3.0', version: '>= 3.22'),
+  dependency('glib-2.0'),
+  dependency('gobject-2.0'),
+  dependency('libxml-2.0'),
+  dependency('libgda-5.0')
 ]
 
 gnome = import('gnome')
